objects/Budget__c.object
<CustomObject>
    <description>Annual Budget Planning</description>
    <fields>
        <fullName>FQ1_CMA__c</fullName>
        <description>Distribution of CMA total budget of fiscal year by fiscal quarter 1</description>
        <label>FQ1 CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ1_Direct__c</fullName>
        <description>Distribution of direct total budget of fiscal year by fiscal quarter 1</description>
        <label>FQ1 Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ1_POS__c</fullName>
        <description>Distribution of POS total budget of fiscal year by fiscal quarter 1</description>
        <label>FQ1 POS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ1_Total__c</fullName>
        <description>This field is used to show in the entry page</description>
        <label>FQ1 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ2_CMA__c</fullName>
        <description>Distribution of CMA total budget of fiscal year by fiscal quarter 2</description>
        <label>FQ2 CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ2_Direct__c</fullName>
        <description>Distribution of direct total budget of fiscal year by fiscal quarter 2</description>
        <label>FQ2 Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ2_POS__c</fullName>
        <description>Distribution of POS total budget of fiscal year by fiscal quarter 2</description>
        <label>FQ2 POS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ2_Total__c</fullName>
        <description>This field is used to show in the entry page</description>
        <label>FQ2 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ3_CMA__c</fullName>
        <description>Distribution of CMA total budget of fiscal year by fiscal quarter 3</description>
        <label>FQ3 CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ3_Direct__c</fullName>
        <description>Distribution of direct total budget of fiscal year by fiscal quarter 3</description>
        <label>FQ3 Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ3_POS__c</fullName>
        <description>Distribution of POS total budget of fiscal year by fiscal quarter 3</description>
        <label>FQ3 POS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ3_Total__c</fullName>
        <description>This field is used to show in the entry page</description>
        <label>FQ3 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_CMA_Budget__c</fullName>
        <description>Sum of CMA total territory budget values over all budget detail records.</description>
        <label>Final CMA Budget</label>
        <summarizedField>Budget_Detail__c.Total_Budget__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Detail__c.Type__c</field>
            <operation>equals</operation>
            <value>CMA</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Direct_Budget__c</fullName>
        <description>Sum of DIRECT total territory budget values over all budget detail records.</description>
        <label>Final Direct Budget</label>
        <summarizedField>Budget_Detail__c.Total_Budget__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Detail__c.Type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_POS_Budget__c</fullName>
        <description>Sum of POS total territory budget values over all budget detail records.</description>
        <label>Final POS Budget</label>
        <summarizedField>Budget_Detail__c.Total_Budget__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Detail__c.Type__c</field>
            <operation>equals</operation>
            <value>POS</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Total_Budget_TBR_NY__c</fullName>
        <description>Final Total Budget based on Budget Rate of Next Year</description>
        <label>Final Total Budget TBR NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Total_Budget__c</fullName>
        <formula>Final_CMA_Budget__c +  Final_Direct_Budget__c +  Final_POS_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is used to show whether the budget is rejected by the manager.</description>
        <label>Is Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L7_Territory_Code__c</fullName>
        <formula>Territory__r.Level_7_Territory_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L7 Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_5_Territory_Code__c</fullName>
        <formula>Territory__r.Level_5_Territory_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 5 Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_6_Assigned_User_Network_Id__c</fullName>
        <description>This field contains the Level 6 User Network Id (Manager Id)</description>
        <formula>Territory__r.Level_6_Assigned_User_Network_Ids__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 6 Assigned User Network Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_CMA_Budget__c</fullName>
        <description>The field is the budget of CMA which the approver inputs.</description>
        <label>Manager CMA Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Direct_Budget__c</fullName>
        <description>The field is the budget of Direct which the approver inputs.</description>
        <label>Manager Direct Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Final_Budget__c</fullName>
        <description>Manager’s final override of budget. This should not be visible to account manager. Should be populated by Manager Total Budget initially.</description>
        <label>Manager Final Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_POS_Budget__c</fullName>
        <description>The field is the budget of POS which the approver inputs.</description>
        <label>Manager POS Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Total_Budget__c</fullName>
        <formula>Manager_Direct_Budget__c + Manager_POS_Budget__c + Manager_CMA_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the Manager of the Budget Owner.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_CMA_Budget__c</fullName>
        <description>Keeps original budget for CMA business. Copied via workflow when budget is approved and stage equals Original.</description>
        <label>Original CMA Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Direct_Budget__c</fullName>
        <description>Keeps original budget for direct business. Copied via workflow when budget is approved and stage equals Original.</description>
        <label>Original Direct Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_POS_Budget__c</fullName>
        <description>Keeps original budget for POS business. Copied via workflow when budget is approved and stage equals Original.</description>
        <label>Original POS Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Total_Budget_TBR_NY__c</fullName>
        <description>Original Total Budget based on Budget Rate of Next Year</description>
        <label>Original Total Budget TBR NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Total_Budget__c</fullName>
        <formula>Original_CMA_Budget__c + Original_Direct_Budget__c +  Original_POS_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <description>The field is used to input the reject reason when the manager rejects the budget.</description>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Period__c</fullName>
        <label>Sales Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Identifies round of budget planning. Ideally, the budget is generated in a first round and then saved as original budget. Then manager will report the bottom-up budget plan. Top-down a revised target is being communicated which will lead into a final budget. User should not be allowed to change back from Final to Original</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Draft means, user can maintain budget plan. Submitted means the user cannot change the budget plan any longer. Approved is a budget by manager. After approval, user or manager can change Stage to Final which will reset Status to Draft.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <formula>Territory__r.Level_7_Territory_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Each budget is determined for one A code (e.g. A001234) which defines one territory.</description>
        <label>Territory</label>
        <referenceTo>Sales_Hierarchy__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Budget_TBR_NY_Rollup__c</fullName>
        <label>Total Budget TBR NY</label>
        <summarizedField>Budget_Detail__c.Budget_TBR_NY__c</summarizedField>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Budget_TBR_NY__c</fullName>
        <description>Total Budget based on Budget Rate of Next Year</description>
        <label>Total Budget TBR NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CMA_Budget_TBR_NY_Rollup__c</fullName>
        <label>Total CMA Budget TBR NY</label>
        <summarizedField>Budget_Detail__c.Budget_TBR_NY__c</summarizedField>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_CMA_Budget_TBR_NY__c</fullName>
        <description>Total CMA Budget based on Budget Rate of Next Year</description>
        <label>Total CMA Budget TBR NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Budget_TBR_NY_Rollup__c</fullName>
        <label>Total Direct Budget TBR NY</label>
        <summarizedField>Budget_Detail__c.Budget_TBR_NY__c</summarizedField>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Budget_TBR_NY__c</fullName>
        <description>Total Direct Budget based on Budget Rate of Next Year</description>
        <label>Total Direct Budget TBR NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_POS_Budget_TBR_NY_Rollup__c</fullName>
        <label>Total POS Budget TBR NY</label>
        <summarizedField>Budget_Detail__c.Budget_TBR_NY__c</summarizedField>
        <summaryForeignKey>Budget_Detail__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_POS_Budget_TBR_NY__c</fullName>
        <description>Total POS Budget based on Budget Rate of Next Year</description>
        <label>Total POS Budget TBR NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Stores fiscal year. Each budget entry is for a specific year.</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All_Budgets</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Is_Reject__c</columns>
        <columns>Territory__c</columns>
        <columns>Year__c</columns>
        <columns>Original_Direct_Budget__c</columns>
        <columns>Original_POS_Budget__c</columns>
        <columns>Original_CMA_Budget__c</columns>
        <columns>Original_Total_Budget__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Budgets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Budgets_2014</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Territory__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Is_Reject__c</columns>
        <columns>Year__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>Budgets 2014</label>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Budgets_2015</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Territory__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Is_Reject__c</columns>
        <columns>Year__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>Budgets 2015</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Budgets_2016</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Territory__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Is_Reject__c</columns>
        <columns>Year__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Budgets 2016</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Budgets_2017</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Territory__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Is_Reject__c</columns>
        <columns>Year__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>Budgets 2017</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Budgets_2018</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Territory__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Is_Reject__c</columns>
        <columns>Year__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>Budgets 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Budget</fullName>
        <columns>NAME</columns>
        <columns>Final_CMA_Budget__c</columns>
        <columns>Final_Direct_Budget__c</columns>
        <columns>Final_POS_Budget__c</columns>
        <columns>Final_Total_Budget__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Territory__c</columns>
        <columns>Original_CMA_Budget__c</columns>
        <columns>Original_Direct_Budget__c</columns>
        <columns>Original_POS_Budget__c</columns>
        <columns>Original_Total_Budget__c</columns>
        <columns>Year__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Budget</label>
    </listViews>
    <nameField>
        <label>Budget  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>